--- a/.github/actions/install-ubuntu/action.yml
+++ b/.github/actions/install-ubuntu/action.yml
@@ -2,17 +2,16 @@ name: Install Prerequisites on Ubuntu
 
 runs:
   using: composite
-
   steps:
     - name: Install packages
       run: |
-        sudo apt-get update -q
+        sudo apt-get update -qq
         sudo apt-get install -yq \
-            libboost-dev \
-            libboost-filesystem-dev \
-            libboost-program-options-dev \
-            libgdal-dev \
-            libproj-dev \
-            libsparsehash-dev
+             libboost-dev \
+             libboost-filesystem-dev \
+             libboost-program-options-dev \
+             libgdal-dev \
+             libproj-dev \
+             libsparsehash-dev
       shell: bash
 
